[package]
name = "async_concurrent_primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7", features = ["futures", "checkpoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }